--- a/Dockerfile7.2
+++ b/Dockerfile7.2
@@ -28,6 +28,7 @@ RUN docker-php-ext-install pdo_sqlite
 RUN docker-php-ext-install phar
 RUN docker-php-ext-install posix
 RUN docker-php-ext-install session
+RUN docker-php-ext-install redis
 RUN docker-php-ext-install simplexml
 RUN docker-php-ext-install soap
 RUN docker-php-ext-install sockets
