--- a/Dockerfile7.2
+++ b/Dockerfile7.2
@@ -27,13 +27,16 @@ RUN docker-php-ext-install pdo_sqlite
 RUN docker-php-ext-install phar
 RUN docker-php-ext-install posix
 RUN docker-php-ext-install session
-RUN docker-php-ext-install redis
 RUN docker-php-ext-install simplexml
 RUN docker-php-ext-install soap
 RUN docker-php-ext-install sockets
 RUN docker-php-ext-install xmlrpc
 RUN docker-php-ext-install xmlwriter
 RUN docker-php-ext-install zip
+
+RUN pecl install -o -f redis \
+&&  rm -rf /tmp/pear \
+&&  docker-php-ext-enable redis
 
 RUN apk add composer
 
