--- a/Dockerfile7.2
+++ b/Dockerfile7.2
@@ -34,9 +34,9 @@ RUN docker-php-ext-install xmlrpc
 RUN docker-php-ext-install xmlwriter
 RUN docker-php-ext-install zip
 
-RUN pecl install -o -f redis \
-&&  rm -rf /tmp/pear \
-&&  docker-php-ext-enable redis
+RUN pecl install -o -f redis
+RUN rm -rf /tmp/pear
+RUN docker-php-ext-enable redis
 
 RUN apk add composer
 
