--- a/Dockerfile7.2
+++ b/Dockerfile7.2
@@ -4,7 +4,7 @@ RUN apk update
 
 #install required dependencies
 RUN apk add postgresql-dev oniguruma-dev curl-dev libxml2-dev bzip2-dev libedit-dev zlib-dev \
-libpng-dev icu-dev gettext-dev gmp-dev sqlite-dev openssl-dev libzip-dev libenchant-dev
+libpng-dev icu-dev gettext-dev gmp-dev sqlite-dev openssl-dev libzip-dev enchant2-dev
 
 
 #install and compile php extensions
