--- a/Dockerfile7.2
+++ b/Dockerfile7.2
@@ -29,7 +29,7 @@ RUN docker-php-ext-install json
 RUN docker-php-ext-install ldap
 RUN docker-php-ext-install mbstring
 RUN docker-php-ext-install mysqli
-RUN apk add unixodbc-dev
+RUN apk add unixodbc-dev libffi-dev
 RUN docker-php-ext-install odbc
 RUN docker-php-ext-install opcache
 RUN docker-php-ext-install pcntl
