--- a/Dockerfile7.2
+++ b/Dockerfile7.2
@@ -6,7 +6,7 @@ RUN apk update
 RUN apk add postgresql-dev oniguruma-dev curl-dev libxml2-dev bzip2-dev libedit-dev zlib-dev \
     libpng-dev icu-dev gettext-dev gmp-dev sqlite-dev openssl-dev \
     libzip-dev enchant2-dev ldb-dev libldap openldap-dev \
-    freetds-dev
+    freetds-dev libxslt-dev aspell-dev net-snmp-dev tidyhtml-dev libsodium-dev argon2-dev
 
 
 #install and compile php extensions
@@ -34,7 +34,6 @@ RUN docker-php-ext-install mysqli
 RUN docker-php-ext-install opcache
 RUN docker-php-ext-install pcntl
 RUN docker-php-ext-install pdo
-RUN apk add freetds-dev
 RUN docker-php-ext-install pdo_dblib
 RUN docker-php-ext-install pdo_mysql
 RUN docker-php-ext-install pdo_pgsql
@@ -42,30 +41,22 @@ RUN docker-php-ext-install pdo_sqlite
 RUN docker-php-ext-install pgsql
 RUN docker-php-ext-install phar
 RUN docker-php-ext-install posix
-RUN apk add aspell-dev
 RUN docker-php-ext-install pspell
 RUN docker-php-ext-install readline
 RUN docker-php-ext-install session
 RUN docker-php-ext-install shmop
 RUN docker-php-ext-install simplexml
-RUN apk add net-snmp-dev
 RUN docker-php-ext-install snmp
 RUN docker-php-ext-install soap
 RUN docker-php-ext-install sockets
-RUN apk add libsodium-dev
 RUN docker-php-ext-install sodium
-RUN apk add argon2-dev
 RUN docker-php-ext-install sysvmsg
 RUN docker-php-ext-install sysvsem
 RUN docker-php-ext-install sysvshm
-RUN apk add tidyhtml-dev
 RUN docker-php-ext-install tidy
 RUN docker-php-ext-install tokenizer
 RUN docker-php-ext-install xml
-#RUN docker-php-ext-install xmlreader
 RUN docker-php-ext-install xmlrpc
-#RUN docker-php-ext-install xmlwriter
-RUN apk add libxslt-dev
 RUN docker-php-ext-install xsl
 RUN docker-php-ext-install zend_test
 RUN docker-php-ext-install zip
