--- a/Dockerfile7.1
+++ b/Dockerfile7.1
@@ -5,7 +5,7 @@ RUN apk update
 #install required dependencies
 RUN apk add postgresql-dev oniguruma-dev curl-dev libxml2-dev bzip2-dev libedit-dev zlib-dev \
     libpng-dev icu-dev gettext-dev gmp-dev sqlite-dev openssl-dev \
-    libzip-dev enchant2-dev ldb-dev libldap openldap-dev recode-dev \
+    libzip-dev ldb-dev libldap openldap-dev recode-dev \
     freetds-dev libxslt-dev aspell-dev net-snmp-dev tidyhtml-dev libsodium-dev argon2-dev
 
 
