--- a/Dockerfile7.0
+++ b/Dockerfile7.0
@@ -100,9 +100,13 @@ RUN docker-php-ext-install zip
 RUN pecl install redis
 RUN docker-php-ext-enable redis
 
-
 RUN pecl install imagick
 RUN docker-php-ext-enable imagick
+
+#install libsodium extension and its dependencies
+RUN apt-get install -y libsodium-dev
+RUN pecl install libsodium
+RUN docker-php-ext-enable sodium
 
 RUN echo "INSTALLING COMPOSER"
 RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" && \
