--- a/Dockerfile7.2
+++ b/Dockerfile7.2
@@ -101,6 +101,11 @@ RUN pecl install mcrypt-1.0.1
 RUN pecl install imagick
 RUN docker-php-ext-enable imagick
 
+#install libsodium extension and its dependencies
+RUN apt-get install -y libsodium-dev
+RUN pecl install libsodium
+RUN docker-php-ext-enable sodium
+
 RUN echo "INSTALLING COMPOSER"
 RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" && \
     php composer-setup.php && php -r "unlink('composer-setup.php');" && mv composer.phar /usr/local/bin/composer
