add properly working alpine builds

--- a/Dockerfile7.0-alpine
+++ b/Dockerfile7.0-alpine
@@ -2,39 +2,39 @@ FROM php:7.0-fpm-alpine
 
 RUN apk update
 
+
+#install required dependencies
+RUN apk add postgresql-dev oniguruma-dev curl-dev libxml2-dev bzip2-dev libedit-dev zlib-dev \
+    libpng-dev icu-dev gettext-dev gmp-dev sqlite-dev openssl-dev \
+    libzip-dev ldb-dev libldap openldap-dev recode-dev \
+    freetds-dev libxslt-dev aspell-dev net-snmp-dev tidyhtml-dev argon2-dev
+
+#install and compile php extensions
+
 RUN docker-php-ext-install bcmath
-#install bz2 dependencies
-RUN apk add --no-cache bzip2-dev
 RUN docker-php-ext-install bz2
 RUN docker-php-ext-install calendar
 RUN docker-php-ext-install ctype
-
-#RUN docker-php-ext-install curl
+RUN docker-php-ext-install curl
 RUN docker-php-ext-install dba
 RUN docker-php-ext-install dom
-RUN docker-php-ext-install enchant
 RUN docker-php-ext-install exif
 RUN docker-php-ext-install fileinfo
-RUN docker-php-ext-install filter
 RUN docker-php-ext-install ftp
 RUN docker-php-ext-install gd
 RUN docker-php-ext-install gettext
 RUN docker-php-ext-install gmp
 RUN docker-php-ext-install hash
 RUN docker-php-ext-install iconv
-RUN docker-php-ext-install imap
-RUN docker-php-ext-install interbase
 RUN docker-php-ext-install intl
 RUN docker-php-ext-install json
 RUN docker-php-ext-install ldap
 RUN docker-php-ext-install mbstring
-RUN docker-php-ext-install mcrypt
 RUN docker-php-ext-install mysqli
 RUN docker-php-ext-install opcache
 RUN docker-php-ext-install pcntl
 RUN docker-php-ext-install pdo
 RUN docker-php-ext-install pdo_dblib
-RUN docker-php-ext-install pdo_firebird
 RUN docker-php-ext-install pdo_mysql
 RUN docker-php-ext-install pdo_pgsql
 RUN docker-php-ext-install pdo_sqlite
@@ -43,29 +43,47 @@ RUN docker-php-ext-install phar
 RUN docker-php-ext-install posix
 RUN docker-php-ext-install pspell
 RUN docker-php-ext-install readline
-RUN docker-php-ext-install recode
-RUN docker-php-ext-install reflection
 RUN docker-php-ext-install session
 RUN docker-php-ext-install shmop
 RUN docker-php-ext-install simplexml
 RUN docker-php-ext-install snmp
 RUN docker-php-ext-install soap
 RUN docker-php-ext-install sockets
-RUN docker-php-ext-install spl
-RUN docker-php-ext-install standard
 RUN docker-php-ext-install sysvmsg
 RUN docker-php-ext-install sysvsem
 RUN docker-php-ext-install sysvshm
 RUN docker-php-ext-install tidy
 RUN docker-php-ext-install tokenizer
-RUN docker-php-ext-install wddx
+RUN docker-php-ext-install recode
 RUN docker-php-ext-install xml
-RUN docker-php-ext-install xmlreader
 RUN docker-php-ext-install xmlrpc
-RUN docker-php-ext-install xmlwriter
 RUN docker-php-ext-install xsl
 RUN docker-php-ext-install zip
 
+#install mcrypt extension
+RUN apk add --no-cache --virtual .mcrypt-deps libmcrypt-dev \
+&& pecl bundle -d /usr/src/php/ext mcrypt \
+&& rm /usr/src/php/ext/mcrypt-*.tgz \
+&& docker-php-ext-install mcrypt \
+&& apk del .mcrypt-deps
+
+#install redis extension
+RUN pecl bundle -d /usr/src/php/ext redis \
+&& rm /usr/src/php/ext/redis-*.tgz \
+&& docker-php-ext-install redis
+
+#install imagick extension
+RUN apk add --no-cache --virtual .imagick-deps imagemagick-dev \
+&& pecl bundle -d /usr/src/php/ext imagick \
+&& rm /usr/src/php/ext/imagick-*.tgz \
+&& docker-php-ext-install imagick \
+&& apk del .imagick-deps
+
+RUN apk add libsodium-dev
+#install libsodium extension
+RUN pecl bundle -d /usr/src/php/ext libsodium \
+&& rm /usr/src/php/ext/libsodium-*.tgz \
+&& docker-php-ext-install libsodium
 
 RUN apk add composer
 
