--- a/Dockerfile7.3-alpine
+++ b/Dockerfile7.3-alpine
@@ -5,7 +5,7 @@ RUN apk update
 #install required dependencies
 RUN apk add postgresql-dev oniguruma-dev curl-dev libxml2-dev bzip2-dev libedit-dev zlib-dev \
     libpng-dev icu-dev gettext-dev gmp-dev sqlite-dev openssl-dev \
-    libzip-dev enchant2-dev ldb-dev libldap openldap-dev recode-dev \
+    libzip-dev enchant2-dev ldb-dev libldap openldap-dev \
     freetds-dev libxslt-dev aspell-dev net-snmp-dev tidyhtml-dev libsodium-dev argon2-dev
 
 
@@ -24,8 +24,7 @@ RUN docker-php-ext-install ftp
 RUN docker-php-ext-install gd
 RUN docker-php-ext-install gettext
 RUN docker-php-ext-install gmp
-RUN docker-php-ext-install hash
-RUN docker-php-ext-install iconv
+RUN docker-php-ext-configure iconv --with-iconv
 RUN docker-php-ext-install intl
 RUN docker-php-ext-install json
 RUN docker-php-ext-install ldap
@@ -42,7 +41,6 @@ RUN docker-php-ext-install pgsql
 RUN docker-php-ext-install phar
 RUN docker-php-ext-install posix
 RUN docker-php-ext-install pspell
-RUN docker-php-ext-install readline
 RUN docker-php-ext-install session
 RUN docker-php-ext-install shmop
 RUN docker-php-ext-install simplexml
@@ -55,12 +53,28 @@ RUN docker-php-ext-install sysvsem
 RUN docker-php-ext-install sysvshm
 RUN docker-php-ext-install tidy
 RUN docker-php-ext-install tokenizer
-RUN docker-php-ext-install recode
 RUN docker-php-ext-install xml
 RUN docker-php-ext-install xmlrpc
 RUN docker-php-ext-install xsl
 RUN docker-php-ext-install zend_test
 RUN docker-php-ext-install zip
+
+#install redis extension
+RUN pecl bundle -d /usr/src/php/ext redis \
+&& rm /usr/src/php/ext/redis-*.tgz \
+&& docker-php-ext-install redis
+
+#install imagick extension
+RUN apk add --no-cache --virtual .imagick-deps imagemagick-dev \
+&& pecl bundle -d /usr/src/php/ext imagick \
+&& rm /usr/src/php/ext/imagick-*.tgz \
+&& docker-php-ext-install imagick \
+&& apk del .imagick-deps
+
+#install libsodium extension
+RUN pecl bundle -d /usr/src/php/ext libsodium \
+&& rm /usr/src/php/ext/libsodium-*.tgz \
+&& docker-php-ext-install libsodium
 
 RUN apk add composer
 
