--- a/Dockerfile8.0-alpine
+++ b/Dockerfile8.0-alpine
@@ -4,43 +4,82 @@ RUN apk update
 
 #install required dependencies
 RUN apk add postgresql-dev oniguruma-dev curl-dev libxml2-dev bzip2-dev libedit-dev zlib-dev \
-libpng-dev icu-dev gettext-dev gmp-dev sqlite-dev openssl-dev libzip-dev
+    libpng-dev icu-dev gettext-dev gmp-dev sqlite-dev openssl-dev \
+    libzip-dev enchant2-dev ldb-dev libldap openldap-dev \
+    freetds-dev libxslt-dev aspell-dev net-snmp-dev tidyhtml-dev libsodium-dev argon2-dev
 
 #install and compile php extensions
+RUN docker-php-ext-install bcmath
+RUN docker-php-ext-install bz2
+RUN docker-php-ext-install calendar
+RUN docker-php-ext-install ctype
 RUN docker-php-ext-install curl
+RUN docker-php-ext-install dba
+RUN docker-php-ext-install dom
+RUN docker-php-ext-install exif
+RUN docker-php-ext-install fileinfo
+RUN docker-php-ext-install ftp
+RUN docker-php-ext-install gd
+RUN docker-php-ext-install gettext
+RUN docker-php-ext-install gmp
+RUN docker-php-ext-configure iconv --with-iconv
+RUN docker-php-ext-install intl
+RUN docker-php-ext-install ldap
+RUN docker-php-ext-install mbstring
 RUN docker-php-ext-install mysqli
+RUN docker-php-ext-install opcache
+RUN docker-php-ext-install pcntl
 RUN docker-php-ext-install pdo
 RUN docker-php-ext-install pdo_dblib
 RUN docker-php-ext-install pdo_mysql
 RUN docker-php-ext-install pdo_pgsql
 RUN docker-php-ext-install pdo_sqlite
 RUN docker-php-ext-install pgsql
-RUN docker-php-ext-install ctype
-RUN docker-php-ext-install mbstring
-RUN docker-php-ext-install xml
-RUN docker-php-ext-install zip
-RUN docker-php-ext-install gd
-RUN docker-php-ext-install intl
-RUN docker-php-ext-install iconv
-RUN docker-php-ext-install pgsql
-RUN docker-php-ext-install soap
-RUN docker-php-ext-install bcmath
-RUN docker-php-ext-install exif
-RUN docker-php-ext-install fileinfo
-RUN docker-php-ext-install filter
-RUN docker-php-ext-install gd
-RUN docker-php-ext-install intl
-RUN docker-php-ext-install gettext
-RUN docker-php-ext-install gmp
-RUN docker-php-ext-install iconv
-RUN docker-php-ext-install opcache
 RUN docker-php-ext-install phar
 RUN docker-php-ext-install posix
+RUN docker-php-ext-install pspell
 RUN docker-php-ext-install session
+RUN docker-php-ext-install shmop
 RUN docker-php-ext-install simplexml
+RUN docker-php-ext-install snmp
 RUN docker-php-ext-install soap
 RUN docker-php-ext-install sockets
-RUN docker-php-ext-install xmlwriter
+RUN docker-php-ext-install sysvmsg
+RUN docker-php-ext-install sysvsem
+RUN docker-php-ext-install sysvshm
+RUN docker-php-ext-install tidy
+RUN docker-php-ext-install tokenizer
+RUN docker-php-ext-install xml
+RUN docker-php-ext-install xsl
+RUN docker-php-ext-install zip
+
+#install xmlrpc extension
+RUN apk add --no-cache --virtual .xmlrpc-deps libxml2-dev \
+  && pecl bundle -d /usr/src/php/ext xmlrpc \
+  && rm /usr/src/php/ext/xmlrpc-*.tgz \
+  && docker-php-ext-install xmlrpc \
+  && apk del .xmlrpc-deps
+
+#install redis extension
+RUN pecl bundle -d /usr/src/php/ext redis \
+  && rm /usr/src/php/ext/redis-*.tgz \
+  && docker-php-ext-install redis
+
+#install imagemagick php8.0 extension for alpine and dependencies
+RUN apk add --no-cache ${PHPIZE_DEPS} imagemagick imagemagick-dev
+
+RUN pecl install -o -f imagick \
+    &&  docker-php-ext-enable imagick
+
+RUN apk add libsodium-dev
+#install libsodium extension
+RUN pecl bundle -d /usr/src/php/ext libsodium \
+  && rm /usr/src/php/ext/libsodium-*.tgz \
+  && docker-php-ext-install libsodium
+
+RUN apk add --no-cache --virtual .persistent-deps libffi-dev \
+    && docker-php-ext-configure ffi --with-ffi \
+    && docker-php-ext-install ffi
 
 RUN echo "INSTALLING COMPOSER"
 RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" && \
