--- a/Dockerfile8.1
+++ b/Dockerfile8.1
@@ -92,6 +92,8 @@ RUN pecl install mcrypt-1.0.5
 RUN pecl install imagick
 RUN docker-php-ext-enable imagick
 
+RUN apt install -y libffi-dev && docker-php-ext-install ffi
+
 RUN echo "INSTALLING COMPOSER"
 RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" && \
     php composer-setup.php && php -r "unlink('composer-setup.php');" && mv composer.phar /usr/local/bin/composer
