--- a/Dockerfile7.0-alpine
+++ b/Dockerfile7.0-alpine
@@ -1,9 +1,9 @@
 FROM php:7.0-fpm-alpine
 RUN apk update
 RUN apk add postgresql-dev oniguruma-dev curl-dev libxml2-dev bzip2-dev libedit-dev zlib-dev \
-    libpng-dev icu-dev gettext-dev gmp-dev sqlite-dev openssl-dev \
+    libpng-dev icu-dev gettext-dev gmp-dev sqlite-dev libressl-dev \
     libzip-dev ldb-dev libldap openldap-dev recode-dev \
-    freetds-dev libxslt-dev aspell-dev net-snmp-dev tidyhtml-dev argon2-dev
+    freetds-dev libxslt-dev aspell-dev net-snmp-dev tidyhtml-dev
 RUN docker-php-ext-install bcmath
 RUN docker-php-ext-install bz2
 RUN docker-php-ext-install calendar
