add php8.3 remove php 7.0 add build file to automate process

--- a/Dockerfile7.1
+++ b/Dockerfile7.1
@@ -88,7 +88,7 @@ RUN docker-php-ext-install xmlrpc
 RUN docker-php-ext-install xmlwriter
 RUN docker-php-ext-install xsl
 RUN docker-php-ext-install zip
-RUN pecl install redis
+RUN pecl install redis-5.3.7
 RUN docker-php-ext-enable redis
 RUN pecl install imagick
 RUN docker-php-ext-enable imagick
