--- a/Dockerfile8.3-alpine
+++ b/Dockerfile8.3-alpine
@@ -1,9 +1,9 @@
-FROM php:7.0-fpm-alpine
+FROM php:8.3-fpm-alpine
 RUN apk update
 RUN apk add postgresql-dev oniguruma-dev curl-dev libxml2-dev bzip2-dev libedit-dev zlib-dev \
-    libpng-dev icu-dev gettext-dev gmp-dev sqlite-dev libressl-dev \
-    libzip-dev ldb-dev libldap openldap-dev recode-dev \
-    freetds-dev libxslt-dev aspell-dev net-snmp-dev tidyhtml-dev
+    libpng-dev icu-dev gettext-dev gmp-dev sqlite-dev openssl-dev \
+    libzip-dev enchant2-dev ldb-dev libldap openldap-dev \
+    freetds-dev libxslt-dev aspell-dev net-snmp-dev tidyhtml-dev libsodium-dev argon2-dev
 RUN docker-php-ext-install bcmath
 RUN docker-php-ext-install bz2
 RUN docker-php-ext-install calendar
@@ -17,10 +17,8 @@ RUN docker-php-ext-install ftp
 RUN docker-php-ext-install gd
 RUN docker-php-ext-install gettext
 RUN docker-php-ext-install gmp
-RUN docker-php-ext-install hash
-RUN docker-php-ext-install iconv
+RUN docker-php-ext-configure iconv --with-iconv
 RUN docker-php-ext-install intl
-RUN docker-php-ext-install json
 RUN docker-php-ext-install ldap
 RUN docker-php-ext-install mbstring
 RUN docker-php-ext-install mysqli
@@ -35,7 +33,6 @@ RUN docker-php-ext-install pgsql
 RUN docker-php-ext-install phar
 RUN docker-php-ext-install posix
 RUN docker-php-ext-install pspell
-RUN docker-php-ext-install readline
 RUN docker-php-ext-install session
 RUN docker-php-ext-install shmop
 RUN docker-php-ext-install simplexml
@@ -45,27 +42,28 @@ RUN docker-php-ext-install sockets
 RUN docker-php-ext-install sysvmsg
 RUN docker-php-ext-install sysvsem
 RUN docker-php-ext-install sysvshm
-RUN apk add --no-cache tidyhtml-dev \
-  && ln -s /usr/include/tidybuffio.h /usr/include/buffio.h \
-  && docker-php-ext-install tidy
-RUN docker-php-ext-install tokenizer
-RUN docker-php-ext-install recode
+RUN docker-php-ext-install tidy
 RUN docker-php-ext-install xml
-RUN docker-php-ext-install xmlrpc
 RUN docker-php-ext-install xsl
 RUN docker-php-ext-install zip
-RUN apk add --no-cache libmcrypt-dev
-RUN docker-php-ext-install mcrypt
-RUN pecl channel-update pecl.php.net
-RUN apk add --no-cache --virtual .phpize-deps $PHPIZE_DEPS
-RUN pecl install redis-5.3.7
-RUN docker-php-ext-enable redis
+RUN apk add --no-cache --virtual .xmlrpc-deps libxml2-dev \
+  && pecl bundle -d /usr/src/php/ext xmlrpc \
+  && rm /usr/src/php/ext/xmlrpc-*.tgz \
+  && docker-php-ext-install xmlrpc \
+  && apk del .xmlrpc-deps
+RUN pecl bundle -d /usr/src/php/ext redis \
+  && rm /usr/src/php/ext/redis-*.tgz \
+  && docker-php-ext-install redis
 RUN apk add --no-cache ${PHPIZE_DEPS} imagemagick imagemagick-dev
 RUN pecl install -o -f imagick \
     &&  docker-php-ext-enable imagick
 RUN apk add libsodium-dev
 RUN pecl bundle -d /usr/src/php/ext libsodium \
-&& rm /usr/src/php/ext/libsodium-*.tgz \
-&& docker-php-ext-install libsodium
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+  && rm /usr/src/php/ext/libsodium-*.tgz \
+  && docker-php-ext-install libsodium
+RUN apk add --no-cache --virtual .persistent-deps libffi-dev \
+    && docker-php-ext-configure ffi --with-ffi \
+    && docker-php-ext-install ffi
+RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" && \
+    php composer-setup.php && php -r "unlink('composer-setup.php');" && mv composer.phar /usr/local/bin/composer
 ENTRYPOINT php-fpm
